endpoints: auctioneer Listing Bids
